# python-mcp-server

./: .gitignore  README.md  pyproject.toml  python-mcp-server.code-workspace  requirements.txt
src/: agent_app.py  agent_centric_initialization_diagram.md  agent_centric_sequence_diagram.md  agent_centric_weather_example.md  app.py  client.py  client_runner.py  mcp_flow_sequence_diagram.md  requirements.txt  test_api_key.py  test_openai_key.py
src/agent_service/: __init__.py  agent_service.py  api.py
src/agent_service/templates/: agent_index.html
src/config/: tools.yaml
src/mcp_server/: __init__.py  agent.py  chatbot.py  server.py
src/mcp_server/tools/: llm.py  registry.py  stock_price.py  weather.py
src/mcp_server/types/: __init__.py  models.py
src/webapp/: app.py
src/webapp/static/: script.js  style.css
src/webapp/templates/: index.html
tests/: test_server.py  test_stock_price.py  test_stock_price_integration.py
